# McpVanguard

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MISSION_PLAN.txt  PRIVACY.md  RAILWAY_OVERVIEW.md  README.md  SECURITY.md  TESTING_GUIDE.md  app.json  checklist_content.xml  index.js  manifest.json  mcp-vanguard.mcpb  nixpacks.toml  package.json  pyproject.toml  railway.json  repro_unicode.py  requirements.txt  setup.py  stress_test.py  test_railway.py  tmp_read_docx.ps1
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: exploit_submission.yml
.github/workflows/: codeql.yml  phase7-measurement.yml  publish.yml  sbom.yml  security-audit.yml  test.yml  validate_poe.yml
arena/: hunter.py  leaderboard.md
arena/challenges/: level_1.py  level_2.py  level_3.py  level_4.py  level_5.py  level_6.py
assets/: __init__.py
core/: __init__.py  __main__.py  active_probing.py  auth.py  behavioral.py  benchmarks.py  camouflage.py  capability_fingerprint.py  cli.py  conformance.py  dashboard.py  demo_mcp.py  fleet.py  jail.py  management.py  metadata_inspection.py  models.py  policy.py  preflight.py  profiles.py  provenance.py  provncloud.py  proxy.py  receipts.py  risk.py  rules_engine.py  safe_regex.py  semantic.py  server_integrity.py  session.py  session_isolation.py  signing.py  sigstore_bundle.py  sse_server.py  supplier_signatures.py  taxonomy.py  telemetry.py  tool_capabilities.py  vex_client.py
core/benchmark_cases/: __init__.py  gpu_false_positive_cases.yaml  gpu_semantic_threshold_cases.yaml  layered_balanced_benign_cases.yaml  layered_behavioral_sequences.yaml  layered_profile_matrix.yaml  layered_strict_adversarial_cases.yaml
docs/: ANTHROPIC_MCP_TUNNELS.md  ARCHITECTURE.md  BENCHMARKS.md  BLOCK_DECISIONS.md  BUILD_ORDER.md  COMPETITIVE_MODEL.md  DEPLOYMENT.md  GPU_RD_HARDENING_CHECKLIST.md  HOSTING.md  LOCAL_SEMANTIC_MODE.md  MCP_2026_07_28_RC_COMPATIBILITY.md  RESEARCH_LAYERED_MCP_ENFORCEMENT.md  SAFE_ZONES.md  SUPABASE_SCHEMA.sql  TECH_STACK.md  railway-deployment-guide.md
mcp_servers/: memory_server.py  search_server.py  toolbox_server.py  vulnerable_fs_server.py  vulnerable_shell_server.py
rules/: __init__.py  commands.yaml  filesystem.yaml  jailbreak.yaml  manifest.json  manifest.sig.json  mcp38_coverage.yaml  network.yaml  privilege.yaml  safe_zones.yaml  strict_overlay.yaml
scripts/: award_points.py  bundle.py  parse_poe_issue.py  phase7_closeout.py  phase7_live_evidence_probe.py  phase7_local_l2_probe.py  phase7_measure_local.py  phase7_prepare_log.py  phase7_redis_probe.py  phase7_report.py  phase7_status.py  replay_exploit.py
test_init_2/rules/: safe_zones.yaml
test_rules/: commands.yaml
tests/: audit_remediation_test.py  conftest.py  deep_audit_verification.py  test_audit_logger.py  test_audit_remediation.py  test_behavioral.py  test_behavioral_ws6.py  test_breakouts.py  test_camouflage.py  test_cli_deep.py  test_cli_update.py  test_conformance.py  test_cross_server_isolation.py  test_dashboard_assets.py  test_e2e_adoption.py  test_e2e_vex.py  test_entropy_scouter.py  test_jail_logic.py  test_management_plane.py  test_management_tools.py  test_metadata_poisoning.py  test_phase7_assurance.py  test_phase7_closeout.py  test_phase7_live_evidence_probe.py  test_phase7_local_l2_probe.py  test_phase7_measure_local.py  test_phase7_prepare_log.py  test_phase7_redis_probe.py  test_phase7_report.py  test_phase7_status.py  test_policy.py  test_preflight.py  test_profiles.py  test_proxy.py  test_proxy_enrichment.py  test_proxy_response_path.py  test_receipts.py  test_rules.py  test_rules_manifest.py  test_rules_strict.py  (+9 more)
tests/benchmarks/: gpu_hardening_cases.yaml  layered_balanced_benign_cases.yaml  layered_behavioral_sequences.yaml  layered_profile_matrix.yaml  layered_strict_adversarial_cases.yaml  mcp38_cases.yaml  railway_certification.py  railway_cloud_certification.py  test_gpu_false_positive_cases.py  test_gpu_hardening_cases.py  test_gpu_hardening_suite.py  test_gpu_semantic_threshold_cases.py  test_mcp38_benchmarks.py
tests/benchmarks/fallback_corpus/: README.md
tests/security/: fuzz_vanguard.py  test_active_probing.py  test_capability_fingerprint.py  test_mcp38_taxonomy.py  test_numeric_edge_cases.py  test_provenance.py  test_server_integrity.py  test_sigstore_bundle.py  test_supplier_signatures.py  test_v171_fixes.py  test_v172_verification.py
tmp/: verify_fixes.py  verify_vulnerabilities.py
